# gh-address-cr-skill

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  SKILL.md  clean.py  pyproject.toml  superpowers-bridge-report.md
.github/workflows/: ci.yml
.specify/: extensions.yml  feature.json
.specify/extensions/: .registry
.specify/integrations/: codex.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: checklist-template.md  plan-template.md  spec-template.md  tasks-template.md
.specify/workflows/: workflow-registry.json
assets/reply-templates/: fixed-p1.md  fixed-p2.md  fixed-p3.md  plan.md
gh-address-cr/: SKILL.md  runtime-requirements.json
gh-address-cr/agents/: openai.yaml
gh-address-cr/references/: cr-triage-checklist.md  evidence-ledger.md  local-review-adapter.md  mode-producer-matrix.md  newcomer-playbook.md  otel-worker-better-stack.md
gh-address-cr/scripts/: audit_report.py  audit_report.sh  batch_github_execute.py  batch_resolve.py  batch_resolve.sh  clean_state.py  (+34 more)
references/: cr-triage-checklist.md
scripts/: audit_report.sh  batch_resolve.sh  common.sh  resolve_thread.sh
tests/: __init__.py  helpers.py  test_agent_protocol.py  test_aux_scripts.py  test_batch_github_execute.py  test_claim_leases.py  test_control_plane_workflow.py  test_cr_loop.py  test_evidence_ledger.py  test_final_gate.py  test_findings_intake.py  test_network_write_contracts.py  test_python_wrappers.py  test_runtime_packaging.py  test_session_engine_cli.py  test_skill_docs.py  test_skill_runtime_shim.py  test_submit_action.py
(+55 files in other folders)
